--- a/lanwiz_about.html
+++ b/lanwiz_about.html
@@ -31,13 +31,13 @@
         <!-- below is top header (logo, navlist-left, and navlist-right) -->
         <nav class="menu">
             <a id="menubtn" class="toggle-nav" href="#">&#9776;</a>
-            <div class="menu-logo"><img class="menu-logo" src="./picture/logo-white.png"></div>
+            <div class="menu-logo" > <a href="./lanwiz_index.html" ><img class="menu-logo" src="./picture/logo-white.png"></a></div>
             <ul id="menuUl" class="active">
                 <li><a class="btn_modal">Log in</a></li>
-                <li><a href="./lanwiz_about.html" class="link_style">About Us</a></li>
+                <li class="current-active"><a href="./lanwiz_about.html" class="link_style">About Us</a></li>
                 <li> <a href="./lanwiz_blog2.html" class="link_style">Blog</a></li>
                 <li><a href="./lanwiz_discussion.html" class="link_style">Discussion</a></li>
-                <li class="current-active"><a href="./lanwiz_exchange2.html" class="link_style">Find a Partner</a></li>
+                <li><a href="./lanwiz_exchange2.html" class="link_style">Find a Partner</a></li>
             </ul>
         </nav>
 
