--- a/lanwiz_index.html
+++ b/lanwiz_index.html
@@ -2,6 +2,7 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="utf-8">
+    <script src="https://use.fontawesome.com/1b8c5a8daf.js"></script>
     <title>Lanwiz-Home</title>
     <link rel="stylesheet" href="./css/lanwiz_index.css">
     <link rel="stylesheet" href="./css/lanwiz_login.css">
@@ -479,7 +480,7 @@
             <div class="footer-part1">
                 <div class="language-container">
                     <section class="footer-language">
-                        <h3> Languages</h3><br>
+                        <h3> Languages</h3>
                     </section>
                     <ul>
                         <li>
@@ -525,7 +526,7 @@
                 </div>
                 <div class="language-container">
                     <section class="footer-language">
-                        <h3> Local Partner</h3><br>
+                        <h3> Local Partner</h3>
                     </section>
                     <ul>
                         <li>
@@ -571,7 +572,7 @@
                 </div>
                 <div class="language-container">
                     <section class="footer-language">
-                        <h3> <br></h3><br>
+                        <h3> Local Partner</h3>
                     </section>
                     <ul>
                         <li>
@@ -617,7 +618,7 @@
                 </div>
                 <div class="language-container">
                     <section class="footer-language">
-                        <h3> <br></h3><br>
+                        <h3> Local Partner</h3>
                     </section>
                     <ul>
                         <li>
