--- a/lanwiz_blog2.html
+++ b/lanwiz_blog2.html
@@ -5,12 +5,15 @@
     <title>Lanwiz-Blog</title>
     <link rel="stylesheet" href="./css/lanwiz_blog2.css">
     <link rel="stylesheet" href="./css/lanwiz_login.css">
-    <link rel="stylesheet" href="./Text Slider/textslider.css">
     <link href="https://fonts.googleapis.com/css?family=Comic+Neue&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"> -->
+    <!-- jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <!-- owl 需要這三隻檔案 -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/blog2_rwd.css">
 
   </head>
@@ -39,9 +42,9 @@
             <ul id="menuUl" class="active">
                 <li><a class="btn_modal">Log in</a></li>
                 <li><a href="./lanwiz_about.html" class="link_style">About Us</a></li>
-                <li> <a href="./lanwiz_blog.html" class="link_style">Blog</a></li>
+                <li  class="current-active"> <a href="./lanwiz_blog.html" class="link_style">Blog</a></li>
                 <li><a href="./lanwiz_discussion2.html" class="link_style">Discussion</a></li>
-                <li class="current-active"><a href="./lanwiz_exchange2.html" class="link_style">Find a Partner</a></li>
+                <li><a href="./lanwiz_exchange2.html" class="link_style">Find a Partner</a></li>
             </ul>
         </nav>
 
@@ -97,61 +100,9 @@
         </div>
     <!-- blog content -->
     <div class="content">
-        <!-- <div class="textslider-container">
-            <div class="owl-slider">
-                <div id="carousel" class="owl-carousel">
-                    <div class="item">
-                        <div class="text-center">English</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Chinese</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Spanish</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">German</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Japanese</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Korean</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">French</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Others</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">English</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Chinese</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Spanish</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">German</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Japanese</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Korean</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">French</div>
-                    </div>
-                    <div class="item">
-                        <div class="text-center">Others</div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
         
+        <script src="./text-slider/text-slider.js"></script>
+    
         <div class="container-waterfall">
             <ul class="waterfall">
                 <li>
