--- a/lanwiz_exchange2.html
+++ b/lanwiz_exchange2.html
@@ -13,13 +13,20 @@
     <link href="https://fonts.googleapis.com/css?family=Comic+Neue&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" href="./css/exchange2_rwd.css">
+    <script src="./bootstrap/jquery/jquery-3.4.1.min.js"></script>
+    <script src="./bootstrap/popper/popper.min.js"></script>
+    <script src="./bootstrap/js/bootstrap.min.js"></script>
+    <style>
+      /* tab使用 */
+      #videos,  #documents {
+        display: none;
+      }
+    </style>
 
   </head>
 
   <body>
-    <script src="./bootstrap/jquery/jquery-3.4.1.min.js"></script>
-    <script src="./bootstrap/popper/popper.min.js"></script>
-    <script src="./bootstrap/js/bootstrap.min.js"></script>
+   
 
   
     <div class="exchange_bar">
@@ -197,7 +204,7 @@
         <section class="section">
           <div class="container">
             <div class="tabs is-boxed">
-              <ul id="ul">
+              <ul class="ul">
                 <li class="videos">
                   <a>
                     <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
@@ -281,7 +288,7 @@
         <section class="section">
           <div class="container">
             <div class="tabs is-boxed">
-              <ul id="ul">
+              <ul class="ul">
                 <li class="videos">
                   <a>
                     <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
@@ -366,7 +373,7 @@
         <section class="section">
           <div class="container">
             <div class="tabs is-boxed">
-              <ul id="ul">
+              <ul class="ul">
                 <li class="videos">
                   <a>
                     <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
@@ -451,7 +458,7 @@
         <section class="section">
           <div class="container">
             <div class="tabs is-boxed">
-              <ul id="ul">
+              <ul class="ul">
                 <li class="videos">
                   <a>
                     <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
@@ -535,7 +542,7 @@
         <section class="section">
           <div class="container">
             <div class="tabs is-boxed">
-              <ul id="ul">
+              <ul class="ul">
                 <li class="videos">
                   <a>
                     <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
@@ -618,7 +625,7 @@
         <section class="section">
           <div class="container">
             <div class="tabs is-boxed">
-              <ul id="ul">
+              <ul class="ul">
                 <li class="videos">
                   <a>
                     <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
