exchange page update

--- a/lanwiz_exchange2.html
+++ b/lanwiz_exchange2.html
@@ -190,7 +190,7 @@
                 <br></br>
                 <span id="native"><strong>Native in:</strong>&nbsp; English</span>
                 <br></br>
-                <span id="learning"><strong>Learning in:</strong>&nbsp; Chinese, France</span>
+                <span id="learning"><strong>Learning in:</strong>&nbsp; Chinese, French</span>
                 <br></br> <br></br>
                 <img class="heart" src="picture/icon/heart-icon.png" style="width: 18px; height: 18px;">&nbsp;&nbsp;&nbsp;&nbsp; 
                 <img src="picture/icon/meg-icon2.png" style="width: 18px; height: 18px;"> 
@@ -445,7 +445,7 @@
                 <br></br>
                 <span id="native"><strong>Native in:</strong>&nbsp; English</span>
                 <br></br>
-                <span id="learning"><strong>Learning in:</strong>&nbsp; Chinese, Japanese, Spanish</span>
+                <span id="learning"><strong>Learning in:</strong>&nbsp; Chinese, Spanish</span>
                 <br></br> <br></br>
                 <img class="heart" src="picture/icon/heart-icon.png" style="width: 18px; height: 18px;">&nbsp;&nbsp;&nbsp;&nbsp; 
                 <img src="picture/icon/meg-icon2.png" style="width: 18px; height: 18px;"> 
@@ -529,7 +529,7 @@
                 <br></br>
                 <span id="native"><strong>Native in:</strong>&nbsp; English</span>
                 <br></br>
-                <span id="learning"><strong>Learning in:</strong>&nbsp; Chinese, Japanese, Spanish</span>
+                <span id="learning"><strong>Learning in:</strong>&nbsp; Chinese, Spanish</span>
                 <br></br> <br></br>
                 <img class="heart" src="picture/icon/heart-icon.png" style="width: 18px; height: 18px;">&nbsp;&nbsp;&nbsp;&nbsp; 
                 <img src="picture/icon/meg-icon2.png" style="width: 18px; height: 18px;"> 
@@ -613,7 +613,7 @@
                 <br></br>
                 <span id="native"><strong>Native in:</strong>&nbsp; English</span>
                 <br></br>
-                <span id="learning"><strong>Learning in:</strong>&nbsp; Chinese, Japanese, Spanish</span>
+                <span id="learning"><strong>Learning in:</strong>&nbsp; Chinese, Japanese</span>
                 <br></br> <br></br>
                 <img class="heart" src="picture/icon/heart-icon.png" style="width: 18px; height: 18px;">&nbsp;&nbsp;&nbsp;&nbsp; 
                 <img src="picture/icon/meg-icon2.png" style="width: 18px; height: 18px;"> 
